samples/_failures_safe/1761546813_b33103_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0ae13b54.c: In function ‘main’:
./samples/SAFE/__tmp_0ae13b54.c:153:16: error: missing terminating " character
  153 |         printf("3. Display recent entries
      |                ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_0ae13b54.c:153:9: error: expected expression at end of input
  153 |         printf("3. Display recent entries
      |         ^~~~~~
./samples/SAFE/__tmp_0ae13b54.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0ae13b54.c:153:9: error: expected declaration or statement at end of input
